# newgpa

./: .gitignore  APPIMAGE.md  BUILD.md  CRYPTO_DESIGN.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  USER_GUIDE_EN.md  USER_GUIDE_FR.md
.github/workflows/: ci.yml
appimage/: NewGPA-x86_64.AppImage.sha256  README.md
docs/: ARCHITECTURE.md  COMPARISON_GPA_KLEOPATRA.md  LIMITATIONS.md  RELEASE_PROCEDURE.md
packaging/appstream/: org.newgpa.NewGPA.metainfo.xml
packaging/desktop/: org.newgpa.NewGPA.desktop
scripts/: build-appimage.sh  build.sh  install-appimage-tools.sh  sign-release.sh  test-appimage.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/crypto/: gpgme.rs  mod.rs  openpgp.rs  post_quantum.rs  smime.rs
src/keyring/: openpgp.rs
src/logging/: mod.rs
src/security/: environment.rs  mod.rs  paths.rs
src/ui/: app.rs
src/vault/: mod.rs
tests/: security.rs
