[package]
name = "newgpa"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Modern Linux privacy assistant for OpenPGP, S/MIME, secure vaults, and experimental post-quantum workflows."
repository = "https://github.com/aurel/newgpa"

[features]
default = ["gui"]
gui = ["dep:gtk4", "dep:adw"]
post-quantum-lab = []

[dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
gpgme = "0.11"
gtk4 = { version = "0.8", optional = true }
adw = { package = "libadwaita", version = "0.6", optional = true }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
zeroize = "1.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "newgpa"
path = "src/main.rs"
